[tool.poetry]
name = "easy-flask-web3"
version = "0.1.0"
description = "Create Web3 for any DOM framework"
authors = ["Prem"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
Flask-Jsonpify = "^1.5.0"
Flask-RESTful = "^0.3.9"
pip = "^21.3.1"

[tool.poetry.dev-dependencies]
eth-brownie = "1.17.0"
web3 = "5.24.0"
py-solc-x = "1.1.1"
python-dotenv = "0.16.0"
vyper = {version="0.3.0", python="3.8"}
autopep8 = "^1.6.0"
nbconvert = {extras = ["webpdf"], version = "^6.4.1"}
tox = "^3.24.5"
pre-commit = "^2.16.0"
black = "21.9b0"
jupyter = "^1.0.0"
flake8 = "^4.0.1"
flake8-docstrings = "^1.6.0"
pycodestyle_magic = "^0.5"
ipytest = "^0.11.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
